@@ -70,7 +70,7 @@ reset()
 ```
 
 This vignette was compiled on `r Sys.Date()` with CHNOSZ version `r sessionInfo()$otherPkgs$CHNOSZ$Version`.
-This document defines the concepts, explains the organization of functions, and provides examples of equilibrium calculations in CHNOSZ.
+This document defines the concepts and provides examples of equilibrium calculations in CHNOSZ.
 
 First, some limitations.
 CHNOSZ is not a general-purpose speciation code.
@@ -501,5 +501,12 @@ leg <- lapply(species()$name, expr.species)
 legend("center", lty = lty, col = col, lwd = 1.5, bty = "n",
        legend = as.expression(leg), y.intersp = 1.3)
 ```
+
+## Document history
+
+* 2009-11-29 Initial version with CSG example, titled "Calculating relative abundances of proteins"
+* 2012-09-30 Renamed to "Equilibrium in CHNOSZ"; remove activity comparisons and add maximum affinity method.
+* 2015-11-08 Move previous material to Appendix and add sections on concepts, organization, examples, and applications; use knitr vignette engine.
+* 2020-07-10 Simplify to concepts and examples (amino acids, proteins, normalization); convert document from LaTeX (Rnw) to Rmarkdown (Rmd).
 
 ## References
